<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Genetics And Evolution</string>
    <string name="problem_solver">Problem Solver</string>
    <string name="problem_generator">Problem Generator</string>
    <string name="cross_simulator">Cross Simulator</string>
    <string name="allele_freak">Allele Freak</string>
    <string name="self_test_quiz">Self-Test Quiz</string>
    <string name="about">About</string>
    <string name="background_color">#045FB4</string>

    <string-array name="navigation_drawer_strings">
        <item>@string/problem_solver</item>
        <item>@string/problem_generator</item>
        <item>@string/cross_simulator</item>
        <item>@string/allele_freak</item>
        <item>@string/self_test_quiz</item>
        <item>@string/about</item>
    </string-array>

    <string-array name="navigation_drawer_images">
        <item>@drawable/nav_problem_solver_image</item>
        <item>@drawable/nav_problem_generator_image</item>
        <item>@drawable/nav_cross_simulator_image</item>
        <item>@drawable/nav_allele_freak_image</item>
        <item>@drawable/nav_self_test_quiz_image</item>
        <item>@drawable/nav_about_image</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <!--string name="quiz_questions_url">https://637a199c47937e7b668851faa0c26911d586837b.googledrive.com/host/0B4PMva-Zlc8Ec0xoOUtiSXJwTUk/GenEvolTerms.json</string-->
    <string name="quiz_questions_url">http://quizupdate.genevol.com/customQuiz/admin/GenEvolTerms.json</string>
    <string name="quiz_questions_file_name">GenEvolTerms.json</string>

    <!-- About Fragment -->
    <string name="a_title">Genetics And Evolution</string>
    <string name="a_about">This app was developed by Jonathan Tseng and Alex Dao to supplement the Duke University Introduction to Genetics and Evolution course taught by Prof. Mohamed Noor. The iOS version was developed by Russell Myers and Brandon Millman. \n\nIt allows users to solve problems covered in the course, including three-point genetic cross mapping, heritability from the breeder\'s equation, population growth and testing for Hardy Weinberg equilibrium.</string>
    <string name="a_coursewebsite">Course Webpage</string>
    <string name="a_onlinedocumentation">Online Manual</string>

    <!-- Problem Solver Fragment -->
    <string name="hardy_weinberg">Hardy Weinberg</string>
    <string name="genetic_cross_mapping">Genetic Cross Mapping</string>
    <string name="pop_growth">Population Growth</string>
    <string name="breeder_eq_heritability">Breeder\'s Equation Heritability</string>
    <string name="ps_clearinputs">Clear</string>

    <string-array name="problem_solver_functions_array">
        <item>@string/hardy_weinberg</item>
        <item>@string/genetic_cross_mapping</item>
        <item>@string/pop_growth</item>
        <item>@string/breeder_eq_heritability</item>
    </string-array>
    <!-- Hardy Weinberg Fragment -->
    <string name="hardy_weinberg_instructions">Please enter the genotype counts observed within a population below.</string>
    <string name="AA_hint">AA count</string>
    <string name="Aa_hint">Aa count</string>
    <string name="aa_hint">aa count</string>
    <string name="solve">Solve!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Genetic Cross Mapping Fragment -->
    <string name="cross_mapping_instructions">Please enter the genotype counts observed in gametes below.</string>
    <string name="ABC_hint">ABC</string>
    <string name="ABc_hint">ABc</string>
    <string name="AbC_hint">AbC</string>
    <string name="Abc_hint">Abc</string>
    <string name="aBC_hint">aBC</string>
    <string name="aBc_hint">aBc</string>
    <string name="abC_hint">abC</string>
    <string name="abc_hint">abc</string>

    <!-- Breeder's Equation Fragment -->
    <string name="breeder_instructions">Please enter any 3 parameters below for the 4th to be solved</string>
    <string name="avg_start_phenotype">Average Starting Phenotype</string>
    <string name="avg_selected_phenotype">Average Selected Phenotype</string>
    <string name="avg_response_phenotype">Average Response Phenotype</string>
    <string name="broad_heriability">Broad Heratibility</string>

    <!-- Population Growth Fragment -->
    <string name="population_growth_instructions">Please enter 3 parameters below to calculate the fourth.</string>
    <string name="popgrowth_growthrate">1. Growth rate (r) = (b - d)/1000 OR</string>
    <string name="popgrowth_birthsper1000">\t\tAnnual # Births per 1000 (b)</string>
    <string name="popgrowth_deathsper1000">\t\tAnnual # Deaths per 1000 (d)</string>
    <string name="popgrowth_initpop">2. Initial Population Size (N<sub>0</sub>)</string>
    <string name="popgrowth_finalpop">3. Final Population Size (N<sub>t</sub>)</string>
    <string name="popgrowth_numyears">4, Time in years (T)</string>

    <!-- Allele Freak -->
    <string name="allele_graph_page">Allele Graph</string>
    <string name="allele_parameters_page">Parameters</string>
    <string name="allele_freak_help">Help</string>
    <string name="allele_param_about">About: \n\nSimulates and plots evolution of two Alleles ("a" and "A") at a single locus over multiple generations, taking into account relative genotype fitness, population size, genetic drift, and level of inbreeding. \n\nQuick start guide: \n\n1. Select the initial frequency of the "a" allele (from 0.0 to 1.0) \n\n2. Select the relative fitness of the homozygote (AA, aa) and heterozygote (Aa) genotypes and the inbreeding coefficient (F) \n\n3. Select the population size (or 0 for infinite population) \n\n4. Press Graph!</string>

    <!-- Graph page -->
    <string name="allele_graph_no_data">Add alleles to graph in the left tab!</string>

    <!-- Params page -->
    <string name="allele_param_initial_freq">Initial Frequency (a):</string>
    <string name="allele_param_fit_AA">Relative Fitness (AA):</string>
    <string name="allele_param_fit_Aa">Relative Fitness (Aa):</string>
    <string name="allele_param_fit_aa">Relative Fitness (aa):</string>
    <string name="allele_param_pop">Population:</string>
    <string name="allele_param_inbreeding">Inbreeding (F):</string>
    <string name="allele_param_generations">Generations: </string>
    <string name="allele_param_graph">Graph!</string>
    <string name="allele_param_clear">Clear!</string>


    <!-- Cross Simulator -->
    <string name="cs_page">Cross Simulator</string>
    <string name="cs_parameters">Parameters</string>
    <string-array name="cs_organisms_array">
        <item>@string/cs_pea</item>
        <item>@string/cs_clover</item>
        <item>@string/cs_snowman</item>
        <item>@string/cs_beardeddragon</item>
    </string-array>
    <string name="cs_pea">Pea</string>
    <string name="cs_clover">Clover</string>
    <string name="cs_snowman">Snowman</string>
    <string name="cs_beardeddragon">Bearded Dragon</string>
    <string name="cs_traits">Traits</string>
    <string name="cs_dominant">Dominant</string>
    <string name="cs_recessive">Recessive</string>
    <string name="cs_next">Next</string>
    <string name="cs_numbertraits">Number of Traits:</string>
    <string name="cs_inheritance">Inheritance:</string>
    <string name="cs_one">One Trait</string>
    <string name="cs_two">Two Traits</string>
    <string name="cs_xlinked">X-link</string>
    <string name="cs_autosomal">Autosomal</string>
    <string name="cs_male">Male</string>
    <string name="cs_female">Female</string>
    <string name="cs_cross">X</string>
    <string name="cs_setup">Setup</string>
    <string name="cs_setup_help">Help</string>
    <string name="cs_setup_help_dialog">Quick start guide: \n\n1. Select type of organism. \n\n2. Select number of traits to be examined within the cross. \n\n3. Toggle inheritance pattern to study (autosomal vs X-linked). \n\n4. Select genotypes to cross. \n\n5. Press NEXT to go to Cross Simulator main screen and perform selected cross.</string>
    <string name="cs_sim_back">Back</string>
    <string name="cs_sim_clear">Clear</string>
    <string name="cs_sim_fertilize">Fertilize</string>

    <!-- Self-Test Quiz Fragment -->
    <string name="stq_definition">Definition</string>
    <string name="stq_answers">Answers</string>
    <string name="stq_submit">Submit</string>
    <string name="stq_shuffle">Shuffle</string>
    <string name="stq_newQuiz">Install New Quiz</string>
    <string name="stq_enterMessage">Enter 5 char Quiz Code</string>
    <string name="stq_installDialogTitle">Install New Quiz</string>
    <string name="stq_installValidating">Validating...</string>
    <string name="stq_connection_error">Connection error. Check Internet connectivity</string>
    <string name="stq_quizCodeRetrieveURL">http://quizupdate.genevol.com/testQuizCode.php?quizCode=</string>
    <string name="stq_CYO_Message">(create your own custom quizzes at http://quizupdate.genevol.com)</string>


    <string name="error_message_bad_url">URL is invalid</string>

    <string name="error_message_file_not_found">File is not found at this URL</string>
    <string name="error_message_general">Error downloading file</string>

    <!-- Problem Generator Fragment -->
    <string name="pg_single_title">Single Problem Generator</string>
    <string name="pg_multiple_title">Multiple Problem Generator</string>
    <string-array name="spg_spinner_array">
        <item>@string/hardy_weinberg</item>
        <item>@string/genetic_cross_mapping</item>
        <item>@string/pop_growth</item>
        <item>@string/breeder_eq_heritability</item>
    </string-array>

    <!-- Single Problem Generator -->
    <string name="spg_given">Given:</string>
    <string name="spg_solve">Solve:</string>
    <string name="spg_generate">Generate</string>
    <string name="spg_showanswer">Show Answer</string>

    <!-- Multiple Problem Generator -->
    <string name="mpg_generate">Generate</string>
    <string name="mpg_filehint">File Name</string>
    <string name="mpg_numquestionsheading">Number of each type of problem:</string>
    <string name="mpg_popgrowthhint">@string/pop_growth</string>
    <string name="mpg_hardyweinberghint">@string/hardy_weinberg</string>
    <string name="mpg_crossmappinghint">@string/genetic_cross_mapping</string>
    <string name="mpg_breederhint">@string/breeder_eq_heritability</string>
    <string name="send_to">Send problems via...</string>


</resources>
