<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cross_mapping_instructions"
        android:paddingBottom="@dimen/fragment_ps_verticalspacing" />
    <EditText
        android:id="@+id/ABC_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/ABC_hint"/>
    <EditText
        android:id="@+id/ABc_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/ABc_hint"/>
    <EditText
        android:id="@+id/AbC_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/AbC_hint"/>
    <EditText
        android:id="@+id/Abc_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/Abc_hint"/>
    <EditText
        android:id="@+id/aBC_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/aBC_hint"/>
    <EditText
        android:id="@+id/aBc_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/aBc_hint"/>
    <EditText
        android:id="@+id/abC_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/abC_hint"/>
    <EditText
        android:id="@+id/abc_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/abc_hint"
        android:layout_marginBottom="@dimen/fragment_ps_verticalspacing"/>

</LinearLayout>
