<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cross_mapping_instructions"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        />
    <EditText
        android:id="@+id/ABC_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructions"
        android:inputType="number"
        android:hint="@string/ABC_hint"/>
    <EditText
        android:id="@+id/ABc_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ABC_count"
        android:inputType="number"
        android:hint="@string/ABc_hint"/>
    <EditText
        android:id="@+id/AbC_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ABc_count"
        android:inputType="number"
        android:hint="@string/AbC_hint"/>
    <EditText
        android:id="@+id/Abc_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AbC_count"
        android:inputType="number"
        android:hint="@string/Abc_hint"/>
    <EditText
        android:id="@+id/aBC_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Abc_count"
        android:inputType="number"
        android:hint="@string/aBC_hint"/>
    <EditText
        android:id="@+id/aBc_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aBC_count"
        android:inputType="number"
        android:hint="@string/aBc_hint"/>
    <EditText
        android:id="@+id/abC_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aBc_count"
        android:inputType="number"
        android:hint="@string/abC_hint"/>
    <EditText
        android:id="@+id/abc_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/abC_count"
        android:inputType="number"
        android:hint="@string/abc_hint"/>
    <Button
        android:id="@+id/solve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve"
        android:layout_below="@id/abc_count"/>
</RelativeLayout>
