<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cs_organisms"/>
    <Spinner
        android:paddingBottom="@dimen/fragment_mpg_verticalspacing"
        android:id="@+id/cs_setup_spinner_organisms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:paddingBottom="@dimen/fragment_mpg_verticalspacing">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cs_numbertraits"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cs_inheritance"
                android:gravity="center"/>
        </TableRow>

        <TableRow>
            <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textOn="@string/cs_one"
                android:textOff="@string/cs_two"
                android:id="@+id/cs_setup_switch_numtraits"/>
            <Switch
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textOn="@string/cs_autosomal"
                android:textOff="@string/cs_xlinked"
                android:id="@+id/cs_setup_switch_inheritance"/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:paddingBottom="@dimen/fragment_mpg_verticalspacing"
        android:id="@+id/cs_setup_table">
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/cs_traits" />
            <TextView
                android:text="@string/cs_dominant" />
            <TextView
                android:text="@string/cs_recessive" />
        </TableRow>
    </TableLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cs_next"
        android:id="@+id/cs_setup_button_next"/>

</LinearLayout>