<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hardy_weinberg_instructions"
        android:layout_marginBottom="@dimen/fragment_ps_verticalspacing"
        android:textSize="@dimen/fragment_ps_textsize"/>

    <EditText
        android:id="@+id/AA_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/AA_hint"
        android:textSize="@dimen/fragment_ps_textsize"/>
    <EditText
        android:id="@+id/Aa_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/Aa_hint"
        android:textSize="@dimen/fragment_ps_textsize"/>
    <EditText
        android:id="@+id/aa_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/aa_hint"
        android:layout_marginBottom="@dimen/fragment_ps_verticalspacing"
        android:textSize="@dimen/fragment_ps_textsize"/>
</LinearLayout>
