<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        />

    <EditText
        android:id="@+id/AA_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructions"
        android:inputType="number"
        android:hint="@string/AA_hint"/>
    <EditText
        android:id="@+id/Aa_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AA_count"
        android:inputType="number"
        android:hint="@string/Aa_hint"/>
    <EditText
        android:id="@+id/aa_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Aa_count"
        android:inputType="number"
        android:hint="@string/aa_hint"/>

    <Button
        android:id="@+id/solve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve"
        android:layout_below="@id/aa_count"/>

</RelativeLayout>
