<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/fragment_about_horizontalmargin"
        android:paddingRight="@dimen/fragment_about_horizontalmargin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_about_picture"
            android:paddingTop="@dimen/fragment_about_picture_padding_top"
            android:src="@drawable/about_picture"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_title"
            android:id="@+id/about_textview_title"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            android:textSize="@dimen/fragment_about_titletextsize"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/fragment_about_spacing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_about"
            android:id="@+id/about_textview_about"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            android:textSize="@dimen/fragment_about_textsize"
            android:layout_marginBottom="@dimen/fragment_about_spacing" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_onlinedocumentation"
            android:id="@+id/about_button_onlinedocumentation"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/fragment_about_spacing"
            android:textSize="@dimen/fragment_about_textsize" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_coursewebsite"
            android:id="@+id/about_button_coursewebsite"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/fragment_about_textsize" />
    </LinearLayout>
</ScrollView>
